# spacecraftSim

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  Cargo.toml  Dockerfile  IMU_BASED_CONTROLLER_GUIDE.md  MOVEMENT_CONTROLLER_USAGE.md  PID_CONTROLLER_GUIDE.md  README.md  REAL_IMU_SOLUTION.md  REAL_PID_SYSTEM_USAGE.md  UNIFIED_CONTROLLER_USAGE.md  check_camera.py  cliff.toml  controlled_movement.py  corrected_movement_control.py  deny.toml  enable_imu.py  enable_labsc_imu.py  enable_real_imu.py  fix_gpu_access.py  fix_ros_check_imu.py  fixed_movement_control.py  fixed_spacecraft_imu_env.py  gentle_movement.py  imu_pid_controller.py  manual_commands.py  movement_client.py  package.xml  physics_imu_node.py  pid_client.py  pid_movement_controller.py  pyproject.toml  quick_start_imu.py  ros_movement_control.py  run_orbit.py  simple_bridge.py  simple_imu_check.py  (+12 more)
.devcontainer/: devcontainer.json
.docker/: demo.bash  dev.bash  join.bash  run.bash
.docker/hpc/: build.bash  run.bash  submit.bash
.github/workflows/: docker.yml  docs.yml  pre-commit.yml  python.yml  rust.yml
apps/: srb.headless.kit  srb.headless.rendering.kit  srb.highperf.kit  srb.rendering.kit
config/: env.yaml
crates/space_robotics_bench/: Cargo.toml
crates/space_robotics_bench/src/: lib.rs
crates/space_robotics_bench/src/envs/cfg/: assets.rs  config.rs  mod.rs
crates/space_robotics_bench/src/envs/cfg/enums/: asset_variant.rs  scenario.rs
crates/space_robotics_bench/src/utils/sampling/: poisson_disk.rs
crates/space_robotics_bench_gui/: Cargo.toml
crates/space_robotics_bench_gui/content/: _images
crates/space_robotics_bench_gui/src/: app.rs  config.rs  lib.rs  main.rs
crates/space_robotics_bench_gui/src/macros/: fonts.rs
crates/space_robotics_bench_gui/src/style/: visuals.rs
crates/space_robotics_bench_gui/src/utils/: egui.rs
crates/space_robotics_bench_py/: Cargo.toml
crates/space_robotics_bench_py/src/: lib.rs
crates/space_robotics_bench_py/src/envs/: mod.rs
crates/space_robotics_bench_py/src/utils/: mod.rs
crates/space_robotics_bench_py/src/utils/sampling/: mod.rs
crates/space_robotics_bench_py/tests/: import_test.py
crates/srb_gui/: Cargo.toml
crates/srb_gui/content/: _images
crates/srb_gui/src/: app.rs  env_cfg.rs
docs/: book.toml
docs/src/: README.md
docs/src/config/: env_cfg.md
docs/src/development/new_assets/: procgen.md
docs/src/envs/: manipulation.md  mobile_manipulation.md  mobile_robotics.md
docs/src/getting_started/: basic_usage.md
docs/src/getting_started/installation/: docker.md
docs/src/instructions/benchmark/: cfg.md
docs/src/misc/: attributions.md
docs/src/robots/: manipulators.md
docs/src/workflows/: reinforcement_learning.md
hyperparams/: dreamerv3.yaml
hyperparams/sb3/: ppo.yaml  ppo_lstm.yaml  sac.yaml
install/srb/share/srb/: package.dsv  (+9 more)
launch/: demo.launch.py
log/: latest_build  latest_list
rl/: ros_orbit_following_train.py
ros2_nodes/: vision_publisher.py
scripts/: _cli_utils.py  gui.bash  list_envs.py  random_agent.py  ros2.py  teleop.py  zero_agent.py
scripts/algo/dreamerv3/: play.py  train.py
scripts/algo/robomimic/: collect.py  play.py  train.py
scripts/algo/sb3/: play.py  train.py
scripts/blender/: __init__.py  procgen_assets.py
scripts/utils/: clean_procgen_cache.py  tensorboard.bash  update_assets.bash
space_robotics_bench/: __init__.py  paths.py
space_robotics_bench/_rs/: __init__.pyi
space_robotics_bench/_rs/envs/: __init__.pyi
space_robotics_bench/assets/: __init__.py
space_robotics_bench/assets/light/: sky.py  sunlight.py
space_robotics_bench/assets/object/: __init__.py  lunar_rock_procgen.py  martian_rock_procgen.py  peg_in_hole_procgen.py  peg_in_hole_profile.py  sample_tube.py  solar_panel.py
space_robotics_bench/assets/robot/: __init__.py  canadarm3_large.py  franka.py  ingenuity.py  perseverance.py
space_robotics_bench/assets/terrain/: __init__.py  lunar_surface_procgen.py  martian_surface_procgen.py
space_robotics_bench/assets/vehicle/: __init__.py  construction_rover.py  gateway.py
space_robotics_bench/core/actions/: aerial.py  manipulator.py  mobile.py
space_robotics_bench/core/envs/: __init__.py
space_robotics_bench/core/interfaces/: __init__.py  ros2.py
space_robotics_bench/core/managers/: __init__.py
space_robotics_bench/core/markers/: frame_marker.py
space_robotics_bench/core/mdp/: __init__.py  events.py  observations.py
space_robotics_bench/core/teleop_devices/: __init__.py  combined.py  se3_keyboard.py  se3_ros2.py  se3_spacemouse.py  se3_touch.py
space_robotics_bench/core/wrappers/: dreamerv3.py  robomimic.py  sb3.py
space_robotics_bench/envs/: __init__.py
space_robotics_bench/envs/aerial/: cfg.py
space_robotics_bench/envs/aerial_robotics/: cfg.py  impl.py
space_robotics_bench/envs/manipulation/: cfg.py  impl.py
space_robotics_bench/envs/mobile/: cfg.py
space_robotics_bench/envs/mobile_robotics/: cfg.py  impl.py
space_robotics_bench/tasks/debris_capture/: task.py
space_robotics_bench/tasks/peg_in_hole/: task.py
space_robotics_bench/tasks/peg_in_hole_multi/: task.py
space_robotics_bench/tasks/sample_collection/: task.py
space_robotics_bench/tasks/sample_collection_multi/: task.py  task_visual.py
space_robotics_bench/tasks/solar_panel_assembly/: task.py
space_robotics_bench/utils/: cfg.py  color.py  image_proc.py  parsing.py  path.py  registry.py  ros.py  rtx_settings.py  sampling.py  traceback.py
spacecraft_control/: package.xml  setup.cfg  setup.py
spacecraft_control/spacecraft_control/: manual_controller.py
srb/: __main__.py
srb/_typing/: __init__.py
srb/assets/object/: apophis.py  apophis.usd  apophis_v233s7_vert2_new.usd  peg_in_hole.py  v2.usd
srb/core/action/: __init__.py
srb/core/env/: __init__.py
srb/core/manager/: __init__.py
srb/core/marker/: __init__.py
srb/core/mdp/: __init__.py
srb/interfaces/interface/: ros.py
srb/utils/: math.py  path.py
src/openvins_bridge/: package.xml  setup.cfg  setup.py
src/openvins_bridge/openvins_bridge/: sync_repub.py
(+118 files in other folders)
