[workspace.package]
authors = ["Andrej Orsula <orsula.andrej@gmail.com>"]
description = "Comprehensive benchmark for space robotics"
categories = ["science::robotics"]
keywords = ["benchmark", "robotics", "simulation", "space"]
readme = "README.md"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/AndrejOrsula/space_robotics_bench"
repository = "https://github.com/AndrejOrsula/space_robotics_bench"
documentation = "https://andrejorsula.github.io/space_robotics_bench"
edition = "2021"
rust-version = "1.80"
version = "0.0.1"
publish = false

[workspace]
resolver = "2"
members = [
    "crates/space_robotics_bench",
    "crates/space_robotics_bench_py",
    "crates/space_robotics_bench_gui",
]
default-members = [
    "crates/space_robotics_bench",
    "crates/space_robotics_bench_py",
]

[workspace.dependencies]
space_robotics_bench = { path = "crates/space_robotics_bench", version = "0.0.1" }

chrono = { version = "0.4" }
const_format = { version = "0.2", features = ["more_str_macros"] }
display_json = { version = "0.2" }
fast_poisson = { version = "1.0", features = ["single_precision"] }
figment = { version = "0.10", features = ["env", "test"] }
home = { version = "0.5.11" }
image = { version = "0.25", default-features = false, features = [
    "jpeg",
    "png",
] }
itertools = { version = "0.13" }
nix = { version = "0.29", features = ["signal"] }
paste = { version = "1.0" }
pyo3 = { version = "0.23", features = ["abi3-py310", "auto-initialize"] }
rand = { version = "0.8" }
rand_xoshiro = { version = "0.6" }
rayon = { version = "1.5" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
serde_yaml = { version = "0.9" }
subprocess = { version = "0.2" }
sysinfo = { version = "0.33" }
thiserror = { version = "2" }
toml = { version = "0.8" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
typed-builder = { version = "0.20" }
