[package]
name = "space_robotics_bench"
description.workspace = true
categories.workspace = true
keywords.workspace = true
readme.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
edition.workspace = true
rust-version.workspace = true
version.workspace = true
publish.workspace = true

[dependencies]
display_json = { workspace = true, optional = true }
fast_poisson = { workspace = true }
figment = { workspace = true }
paste = { workspace = true }
pyo3 = { workspace = true }
rand = { workspace = true }
rand_xoshiro = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, optional = true }
serde_yaml = { workspace = true, optional = true }
thiserror = { workspace = true }
toml = { workspace = true, optional = true }

[features]
default = ["yaml"]
json = ["dep:serde_json", "figment/json", "dep:display_json"]
toml = ["dep:toml", "figment/toml"]
yaml = ["dep:serde_yaml", "figment/yaml"]
