[package]
name = "space_robotics_bench_gui"
description.workspace = true
categories.workspace = true
keywords.workspace = true
readme.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
edition.workspace = true
rust-version.workspace = true
version.workspace = true
publish.workspace = true

[[bin]]
name = "gui"
path = "src/main.rs"

[dependencies]
space_robotics_bench = { workspace = true, features = ["json"] }

eframe = { version = "0.30", default-features = false, features = [
    "accesskit",
    "glow",
    "persistence",
] }
egui = { version = "0.29", default-features = false }
egui_extras = { version = "0.30", default-features = false, features = [
    "all_loaders",
    "syntect",
] }
egui_commonmark = { version = "0.19", default-features = false, features = [
    "better_syntax_highlighting",
    "macros",
    "pulldown_cmark",
] }
r2r = { version = "0.9" }

display_json = { workspace = true }
chrono = { workspace = true }
const_format = { workspace = true }
home = { workspace = true }
image = { workspace = true }
itertools = { workspace = true }
nix = { workspace = true }
paste = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
subprocess = { workspace = true }
sysinfo = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
typed-builder = { workspace = true }
