[package]
name = "space_robotics_bench_py"
description.workspace = true
categories.workspace = true
keywords.workspace = true
readme.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
edition.workspace = true
rust-version.workspace = true
version.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
space_robotics_bench = { workspace = true }

const_format = { workspace = true }
pyo3 = { workspace = true }
