<?xml version="1.0"?>
<package format="3">
  <name>openvins_bridge</name>
  <version>0.0.1</version>
  <description>Bridge for VINS-Fusion integration with Isaac Sim</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>MIT</license>
  
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>message_filters</depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
